--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -75,60 +75,60 @@
           "title": "Fachhochschule Hagenberg, Medientechnik und Design (BAKK)",
           "subtitle": "Bachelor of Science",
           "description": "Kompetenzen: Webentwicklung & Design, Film, Audio, 3D, Online-Marketing, 2D Motion Graphics",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_base_icon.svg"
         },
         "item2": {
           "period": "Sept. 2017 - Juli 2018",
           "title": "Illuskills Wien",
           "subtitle": "Zertifikat: Medienillustration",
           "description": "Berufsbegleitende Ausbildung im Bereich Medienillustration",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_art_icon.svg"
         },
         "item3": {
           "period": "Sept. 2017 - Dez. 2017",
           "title": "bit Schulungscenter, Linz",
           "subtitle": "ECDL Weiterbildung",
           "description": "ECDL Web Editing (HTML5, CSS3, Responsive), ECDL Powerpoint Advance",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_temp_icon.svg"
         },
         "item4": {
           "period": "Otk. 2010 - Juni. 2014",
           "title": "Werbe-Design-Academie (WDA), WIFI Salzburg",
           "subtitle": "Diplom im Bereich Kommunikationsdesign",
           "description": "Kompetenzen: Print, Dorporate Design, Packaging Design, Fotografie",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_design_icon.svg"
         },
         "item5": {
           "period": "Nov. 2011 - Feb. 2012",
           "title": "FiT - Frauen in Handwerk und Technik, BFI Salzburg",
           "subtitle": "Neuorientierung",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_temp_icon.svg"
         },
         "item6": {
           "period": "Okt. 2008 - Dez. 2010",
           "title": "Fachhochschule Salzburg Urstein, MultiMediaArt",
           "subtitle": "Kein Abschluss",
           "description": "Spezialisierung: Audio/Audiotechnik | Kompetenzen: Multimedia, Audiotechnik, 3D, Film",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_base_icon.svg"
         },
         "item7": {
           "period": "Nov. 2007 - Juni 2008",
           "title": "Orff-Institut, Salzburg",
           "subtitle": "Überbrückung",
           "description": "Außerordentliche Hörerin elementare Musik- und Tanzpädagogin (Überbrückung)",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_temp_icon.svg"
         },
         "item8": {
           "period": "Sept. 2003 - Juni 2007",
           "title": "Bundesrealstufengymnasium (Musischer Zweig), Salzburg",
           "subtitle": "Matura",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_base_icon.svg"
         },
         "item9": {
           "period": "Sept. 1995 - Juni 2003",
           "title": "Volks- und Hauptschulausbildung, Faistenau",
           "subtitle": "Grundschulausbildung",
-          "icon": "./src/assets/img/icons/education_icon.svg"
+          "icon": "./src/assets/img/icons/education_base_icon.svg"
         }
       }
     },
@@ -140,7 +140,7 @@
           "company": "Redlink GmbH, Salzburg",
           "position": "Frontend-Entwicklerin, UI/UX-Designerin, Marketing & Design",
           "description": "Entwicklung von Webanwendungen und Design von Benutzeroberflächen für verschiedene Kunden. Interne Grafik und Marketing.",
-          "icon": "./src/assets/img/icons/work_icon.svg"
+          "icon": "./src/assets/img/icons/work_web_icon.svg"
         },
         "item2": {
           "period": "Feb. 2021 - Aug. 2021",
@@ -206,22 +206,35 @@
           "icon": "./src/assets/img/icons/work_design_icon.svg"
         },
         "item11": {
+          "period": "Juli 2013 - Sept. 2013",
+          "company": "Maya Inspiranto Werbeagentur, Salzburg",
+          "position": "Berufspraktikum, Grafik & Design",
+          "description": "Design und Layoutarbeiten für Kundenprojekte.",
+          "icon": "./src/assets/img/icons/internship_icon.svg"
+        },
+        "item12": {
           "period": "Aug. 2012 - März 2013",
           "company": "Bäckerei und Konditorei Flöckner, Salzburg Gnigl",
           "position": "Teilzeitmitarbeiterin im Verkauf und Café",
           "icon": "./src/assets/img/icons/work_temporary_icon.svg"
         },
-        "item12": {
+        "item13": {
           "period": "Mai 2012 - Juli 2012",
           "company": "Café-Restaurant & Pizzeria Papageno, St. Gilgen",
           "position": "Ferialmitarbeitern, Eisverkauf und Service",
           "icon": "./src/assets/img/icons/work_temporary_icon.svg"
         },
-        "item13": {
+        "item14": {
           "period": "Jän. 2012 - März 2012",
           "company": "Schnupperpraktika Grafik & Design",
           "position": "Herkules-Artworks Werbeagentur Linz, Maya Inspiranto Werbeagentur Salzburg",
           "icon": "./src/assets/img/icons/internship_icon.svg"
+        },
+        "item15": {
+          "period": "2003-2007",
+          "company": "Klavier Dinnermusik",
+          "position": "Gasthof zur Post, Faistenau",
+          "icon": "./src/assets/img/icons/work_temporary_icon.svg"
         }
       }
     }
