--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -58,7 +58,29 @@
   },
   "projects": {
     "title": "Meine Projekte",
-    "viewProject": "Projekt ansehen"
+    "viewProject": "Projekt ansehen",
+    "year": "Jahr",
+    "role": "Rolle",
+    "client": "Client",
+    "gallery": "Gallerie",
+    "detailTitle": {
+      "projectOverview": "Projektübersicht",
+      "technicalImplementation": "Technische Umsetzung"
+    },
+    "clients": {
+      "personalProject": "Freies Projekt",
+      "studyProject": "Studienprojekt"
+    },
+    "projectList": {
+      "plantbase": {
+        "title": "PlantBase",
+        "subtitle": "Plant Care Management System",
+        "description": "A comprehensive web application for plant enthusiasts to track and manage their indoor plants.",
+        "role": "UI/UX Designerin, Dveloperin",
+        "overviewDesc": "PlantBase is a modern web application designed to help plant enthusiasts manage their indoor plants. The application provides detailed care instructions, watering schedules, and growth tracking capabilities.",
+        "techincalDesc": "Design Created with Adobe XD. Built with Vue.js, Twig and TypeScript for the frontend, utilizing Composition API and type-safe development practices. The backend is build with Symphony and PHP."
+      }
+    }
   },
   "career": {
     "title": "Werdegang",
