update filter grouping

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -19,7 +19,8 @@
       "responsive": "Responsive Design",
       "design": "Grafik- & Branddesign",
       "creativeSkills": "Leidenschaften & Creative Skills",
-      "product": "Produktentwicklung"
+      "product": "Produktentwicklung",
+      "print": "Printproduktion"
     },
     "skillElements": {
       "colorTheory": "Farbtheorie",
