fix clickevents for project cards

--- a/src/i18n/locales/de.json
+++ b/src/i18n/locales/de.json
@@ -20,7 +20,8 @@
       "design": "Grafik- & Branddesign",
       "creativeSkills": "Leidenschaften & Creative Skills",
       "product": "Produktentwicklung",
-      "print": "Printproduktion"
+      "print": "Printproduktion",
+      "packaging": "Verpackungsdesign"
     },
     "skillElements": {
       "colorTheory": "Farbtheorie",
